NXP-27683: comment permissions are not set correctly